
<resources>
    <string name="app_name">Review Lagbe</string>
    <string name="search_your_recipes">Search Your Recipes…</string>
    <string name="meal_categories">Meal Categories</string>
    <string name="reviewlagbe">ReviewLagbe?</string>
    <string name="kisher_review_lagbe">Kisher Review Lagbe?</string>
    <string name="review_lagbe">Review Lagbe?</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="textview">TextView</string>
    <string name="added_successfully">Added Successfully</string>
    <string name="title">Title</string>
    <string name="kikhaben">KiKhaben</string>
    <string name="restaurant">Restaurant</string>
    <string name="service">Service</string>
    <string name="food">Food</string>
    <string name="add">Add</string>
    <string name="environment">Environment</string>
    <string name="write_post">Write Post</string>
    <string name="input_dao">Input Dao</string>
    <string name="welcome_to">Welcome to_</string>

    <string name="spinner">spinner example</string>
    <string-array name="names">
        <item>Home</item>
        <item>SignUp</item>
        <item>Login</item>
    </string-array>
</resources>
