<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.ViewPage">

    <EditText

        android:id="@+id/popup_title"
        android:layout_width="394dp"
        android:layout_height="41dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="130dp"
        android:background="@drawable/popuo_edittext_style"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.705"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127"
        android:autofillHints="" />

    <EditText
        android:id="@+id/popup_description"
        android:layout_width="390dp"
        android:layout_height="116dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:ems="10"
        android:hint="@string/write_post"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_title"
        android:autofillHints="" />


    <ProgressBar
        android:id="@+id/popup_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/circle_bg"
        android:padding="4dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_description"
        app:layout_constraintVertical_bias="0.519" />

    <Button
        android:id="@+id/popup_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:cursorVisible="false"
        android:text="@string/input_dao"
        android:textColor="#00EF1212"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/popup_progressBar"
        app:layout_constraintStart_toStartOf="@+id/popup_progressBar"
        app:layout_constraintTop_toTopOf="@+id/popup_progressBar"
        tools:visibility="visible" />

    <SeekBar
        android:id="@+id/FoodR"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="288dp"
        android:layout_height="18dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="13dp"
        android:max="10"
        android:min="0"
        app:layout_constraintBottom_toTopOf="@+id/ServiceR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/t2"
        app:layout_constraintTop_toBottomOf="@+id/RestaurantR" />

    <SeekBar
        android:id="@+id/RestaurantR"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="288dp"
        android:layout_height="18dp"
        android:layout_marginTop="29dp"
        android:max="10"
        android:min="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_description" />

    <SeekBar
        android:id="@+id/ServiceR"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="288dp"
        android:layout_height="18dp"
        android:max="10"
        android:min="0"
        app:layout_constraintBottom_toBottomOf="@+id/t3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.756"
        app:layout_constraintStart_toEndOf="@+id/t3"
        app:layout_constraintTop_toBottomOf="@+id/FoodR"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="480dp"
        android:text="@string/restaurant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/RestaurantR"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_description"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginLeft="9dp" />

    <TextView
        android:id="@+id/t2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="12dp"
        android:text="@string/food"
        app:layout_constraintBottom_toTopOf="@+id/t3"
        app:layout_constraintEnd_toStartOf="@+id/FoodR"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t1" />

    <TextView
        android:id="@+id/t3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FoodR" />

    <TextView
        android:id="@+id/t4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="64dp"
        android:text="@string/environment"
        app:layout_constraintBottom_toTopOf="@+id/popup_progressBar"
        app:layout_constraintEnd_toStartOf="@+id/EnvironmentR"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t3" />

    <TextView
        android:id="@+id/t5"
        android:layout_width="105dp"
        android:layout_height="25dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/kikhaben"
        app:layout_constraintBottom_toTopOf="@+id/popup_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" tools:targetApi="jelly_bean" />

    <SeekBar
        android:id="@+id/EnvironmentR"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="275dp"
        android:layout_height="17dp"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="62dp"
        android:max="10"
        android:min="0"
        app:layout_constraintBottom_toTopOf="@+id/popup_progressBar"
        app:layout_constraintEnd_toEndOf="@+id/ServiceR"
        app:layout_constraintStart_toEndOf="@+id/t4"
        app:layout_constraintTop_toBottomOf="@+id/ServiceR" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginLeft="177dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="178dp"
        android:layout_marginRight="178dp"
        android:layout_marginBottom="145dp"
        android:clickable="true"
        android:focusable="true"
        android:scrollbarSize="4dp"
        android:visibility="invisible"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/popup_progressBar"
        app:layout_constraintVertical_bias="0.0"
        app:maxImageSize="24dp"
        app:srcCompat="@drawable/ic_baseline_add_24"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginLeft="173dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="179dp"
        android:layout_marginRight="179dp"
        android:layout_marginBottom="103dp"
        android:text="@string/added_successfully"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_progressBar"
        android:textStyle="bold"
        android:textSize="19sp"/>
</android.support.constraint.ConstraintLayout>