<?xml version="1.0" encoding="utf-8"?>


<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:fitsSystemWindows="true"
    android:visibility="visible"
    tools:context=".view.home.HomeActivity"
    tools:visibility="visible"
    android:focusable="true">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/headerView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button2"
                android:layout_width="83dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/button3"
                android:layout_alignBottom="@+id/viewPagerHeader"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="23dp"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="-27dp"
                android:layout_marginEnd="103dp"
                android:layout_marginRight="103dp"
                android:layout_marginBottom="-34dp"
                android:layout_toEndOf="@+id/titleCatergory"
                android:layout_toRightOf="@+id/titleCatergory"
                android:text="@string/signup"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="8sp"
                tools:text="@string/signup" />

            <TextView
                android:id="@+id/titleCatergory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/viewPagerHeader"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="16dp"
                android:text="@string/kisher_review_lagbe"
                android:textColor="@android:color/primary_text_light_nodisable"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:text="@string/reviewlagbe"
                android:textColor="@android:color/primary_text_light_nodisable"
                android:textSize="36sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <View
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@android:color/holo_blue_dark"
                android:visibility="invisible" />

            <android.support.v4.view.ViewPager
                android:id="@id/viewPagerHeader"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@id/cardSearch"
                android:layout_marginTop="5dp"
                android:clipToPadding="false"
                android:foregroundGravity="center"
                android:overScrollMode="never"
                android:visibility="invisible">

            </android.support.v4.view.ViewPager>

            <android.support.v7.widget.CardView
                android:id="@+id/cardSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="16dp"
                app:cardBackgroundColor="@android:color/secondary_text_dark"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:drawableStart="@drawable/ic_search_primary_light"
                    android:drawableLeft="@drawable/ic_search_primary_light"
                    android:drawablePadding="10dp"
                    android:padding="10dp"
                    android:text="Search Your Options"
                    android:textColor="@color/colorPrimaryLight"
                    android:visibility="invisible" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible" />

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.RecyclerView
                android:id="@id/recyclerCategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/titleCatergory"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="50dp"
                android:clipToPadding="false"
                android:scrollbars="none"></android.support.v7.widget.RecyclerView>


            <include
                android:id="@+id/shimmerCategory"
                layout="@layout/item_recycler_category_shimmer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <include
                android:id="@+id/shimmerMeal"
                layout="@layout/item_view_pager_header_shimmer"
                android:visibility="gone"
                tools:visibility="gone" />

            <Button
                android:id="@+id/button3"
                android:layout_width="60dp"
                android:layout_height="43dp"
                android:layout_above="@+id/recyclerCategory"
                android:layout_below="@+id/viewPagerHeader"
                android:layout_alignStart="@+id/cardSearch"
                android:layout_alignLeft="@+id/cardSearch"
                android:layout_alignEnd="@+id/cardSearch"
                android:layout_alignRight="@+id/cardSearch"
                android:layout_marginStart="298dp"
                android:layout_marginLeft="298dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="21dp"
                android:layout_marginRight="21dp"
                android:layout_marginBottom="-5dp"
                android:text="@string/login"
                android:textSize="8sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="280dp"
                android:layout_marginRight="280dp"
                android:text="Welcome to _"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="visible" />


        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>